--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -5,11 +5,13 @@
 <div class="container1 active">
   
     <div class="container" style=" margin-bottom: 10px;">
-      <h1 style="text-align: center;"> Hirekaan Manasseh</h1>
-      <p style="text-align: center;">Hi my name is Manasseh, Am a python/Django developer and I enjoy making Websites. I also enjoy playing football </p>
-      <span style="justify-content: center; "><a style="margin: auto; " href="mailto:hirekaanm3@gmail.com" > Email Me</a></span>
+      <div class="cwrapper">
+        <h1 style="text-align: center;"> Hirekaan Manasseh</h1>
+        <p style="text-align: center;">Hi my name is Manasseh, Am a python/Django developer and I enjoy making Websites. I also enjoy playing football </p>
+        <span style="justify-content: center; "><a style="margin: auto; " href="mailto:hirekaanm3@gmail.com" > Email Me</a></span>
+      </div>  
     </div>
-  
+ 
     <div class="card auto" style="margin-top: 10px; padding-top:5px; padding-bottom:10px;">
   <img src="{% static 'manasseh.jpg' %}" alt="Avatar" style="width:100%">
   <!---<div class="container">
