--- a/projects/static/css/main.css
+++ b/projects/static/css/main.css
@@ -1,4 +1,3 @@
-
   
 footer{
   /*position: absolute;
@@ -182,6 +181,10 @@ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 padding: 2px 16px; 
 text-align: center;
 
+}
+.cwrapper{
+  width: 450px;
+  margin: 0px auto;
 }
 
 img{
